changed resume link

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -247,7 +247,7 @@
                       <p><a>https://github.com/EssDeeJay</a></p>
                   </div>
               </div>
-              <button type="button" class="btn btn-primary" onclick="window.location.href ='https://drive.google.com/file/d/1rrXNgZfXXw7HKp_D4d0isDu-vWoB47nE/view?usp=sharing';">
+              <button type="button" class="btn btn-primary" onclick="window.location.href ='https://drive.google.com/open?id=1p3Yh90JURJ80ub5Mtyw4MKuMMzW1fLUX';">
                   <i class="fa fa-download"></i> Resume/CV</button>
               </div>
               <div class="footer text-center">
