--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,6 +12,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://kit.fontawesome.com/ee427fdc71.js"></script>
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">    
   </head>
     
@@ -27,13 +28,9 @@
         University of Windsor</h3>
         </div>
         </div>
-    <div class="scroll-btn">
-    <div class="scroll-bar">
-        <a href="#about">
-            <span> </span>
-        </a>
-        </div>
-    </div>
+        <span class="demo">
+    <a href="#about" class="scroll-btn"><button class="btn">+</button></a>
+    </span>
       </section>
   
      <!-----------User Info Section-------------------> 
