--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Shreyank Jadiya | Front End Developer</title>
+    <title>Shreyank Jadiya | Web Developer</title>
   <meta name="author" content="Shreyank Jadiya">
   <meta name="description" content="This is my portfolio page">
   <meta name="keywords" content="portfolio,resume,web developer">
@@ -24,7 +24,7 @@
     <div class="user-box">
         <img src="https://i.imgur.com/oJNmxiD.png" alt="shreyank">
         <h1>Shreyank Jadiya | M.Eng - Electrical & Computer</h1>
-        <h3>Front End Web Developer <br>
+        <h3>Web Developer <br><br>
         University of Windsor</h3>
         </div>
         </div>
@@ -71,27 +71,27 @@
               </div>
               <div class="col-md-6">
               <h3> > WHO AM I ?</h3>
-              <p>My Name is Shreyank Jadiya. I am a Master's Graduate from University of Windsor. I have done my Bachelor's in Electrical Engineering and I went for my Master's in Electrical & Computer as I am passionate about web development and computer networks. I have studied web development and Computer Networks as well as I have also done some projects as part of my coursework and some as a self project to learn and implement new technologies.Here, You can find more about my skills and why I chose to go for web development.</p>
+              <p>Hello ! My name is <b>Shreyank Jadiya</b> and I have recently completed my masters in Electrical & Computer from <b>University of Windsor</b> I have started my career as a <b>Design Engineer</b> ,where my primary responsiblity was to work with product process design according to client's requirements. I have 2 years of Hands-on Coding experience designing mainly web apps with expertise in responsive web design, Cross Browser functionality testing and refactoring of code using latest methodologies like TDD and DevOps.</p><p>Parallel with my studies, I have also completed Web development course, followed by self made projects using latest technologies and frameworks. Moreover, my experience as a part time Team member has helped me to gain effective communication skills.Below, you can see more about myself as why I chose web development and my projects</p>
                   <h3> > WHY WEB DEVELOPMENT ?</h3>
                   <p>If you're looking for my profile for the first time, you might be wondering, why I have decided to go for web development?
                   If I explain in short I would say I am a challenge hungry person who likes to complete the challenge. To Know more,Just contact me via e-mail or drop a text. I'm just a click away from you :).</p>
                   <div class="skills-bar">
-                      <p>HTML</p>
+                      <p>HTML/CSS/JS</p>
+                  <div class="progress">
+                      <div class="progress-bar" style="width: 85%;">85%</div>
+                      </div>
+                      
+                      <p>jQuery</p>
                   <div class="progress">
                       <div class="progress-bar" style="width: 70%;">70%</div>
                       </div>
                       
-                      <p>CSS</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 80%;">80%</div>
-                      </div>
-                      
-                      <p>JavaScript</p>
+                      <p>Git & Github</p>
                   <div class="progress">
                       <div class="progress-bar" style="width: 75%;">75%</div>
                       </div>
                       
-                      <p>jQuery</p>
+                      <p>JSON & XML</p>
                   <div class="progress">
                       <div class="progress-bar" style="width: 60%;">60%</div>
                       </div>
@@ -106,21 +106,28 @@
                       <div class="progress-bar" style="width: 85%;">85%</div>
                       </div>
                       
-                      <p>Git & Github</p>
+                      <p>ReactJS & AngularJS</p>
                   <div class="progress">
                       <div class="progress-bar" style="width: 70%;">70%</div>
                       </div>
-                      <p>Front End Frameworks & Libraries</p>
+                      
+                      <p>Python/C++/C#</p>
                   <div class="progress">
                       <div class="progress-bar" style="width: 65%;">65%</div>
                       </div>
-                      <p>Python</p>
+                      
+                      <p>MySQL</p>
                   <div class="progress">
                       <div class="progress-bar" style="width: 60%;">60%</div>
                       </div>
-                  </div>
+                      <p>AWS</p>
+                  <div class="progress">
+                      <div class="progress-bar" style="width: 50%;">50%</div>
+                      </div>
+                      
+                </div>
               </div>
-              </div>
+            </div>
           </div>
           <!---------------------------Sticky Icon Section-------------------------------------------------->
           <div class="social-icons">
@@ -149,7 +156,7 @@
                        </li>
                        
                        <li>
-                       <h4>Engineer</h4>
+                       <h4> Design Engineer</h4>
                        <p>- Designing maintenance strategies, procedures and methods <br> - Diagnosing breakdown problems <br> - Carrying out quality inspections on jobs <br> - Controlling maintenance tools, stores and equipment <br>- Monitoring and controlling maintenance costs <br> - Dealing with emergencies, unplanned faults and repairs<br>
                     <b>Company Name</b> - Neoseal Adhesives Pvt. Ltd.<br> 
                     <b>Duration</b> - 1 Year [2017 to 2018]<br>
@@ -198,25 +205,22 @@
               <div class="row">
               <div class="col-md-4">
                  <div class="projects-box">
-                  <i class="fa fa-fire"></i><span> HF-ZVS Converter</span>
-                <p>Designed High voltage driver circuit needed to supply power for melting of metals<br>- ZVS (Zero Voltage Switching) Driver circuit using TIP35 And IRFZ44, Current limiting circuit design using LM317 IC
-                     </p>
+                  <i class="fa fa-fire"></i><span> YelpCamp</span>
+                <p>My First Self made Project from my web development course made with MongoDB and NodeJS<br>Used MEN stack and used RESTful routing and TDD to deploy final App with some amazing features.<a href="https://shreyank-jadiya.herokuapp.com/"> Learn More...</a></p>
                   </div> 
                   </div>
                   
                   <div class="col-md-4">
                  <div class="projects-box">
                   <i class="fa fa-cloud"></i><span> Weather Forecaster</span>
-                <p>Using terminal and python libraries made a data scrapper to scrap live data from openweathermap API<br>- Requests and JSON library to fetch live API data of any location around the world
-                     </p>
+                <p>Using terminal and python libraries made a data scrapper to scrap live data from openweathermap API<br>- Requests and JSON library to fetch live API data of any location around the world with successful conversion of data from JSON to Python</p>
                   </div> 
                   </div>
                   
                   <div class="col-md-4">
                  <div class="projects-box">
-                  <i class="fa fa-bolt"></i><span> Light Detector</span>
-                <p>Designed circuit for automatic light detector that senses the darkness and turns on light automatically just like light sensor<br>- PCB Design and soldering to make circuit working and attach the Lamps and LED as well
-                     </p>
+                  <i class="fa fa-bolt"></i><span> API Demo Project</span>
+                <p>Designed a Project by creating own API with Node and Mongo which uses REST techniques for routes<br>JSON API which updates,deletes,posts and shows according to the routing algorithms and stores in database as well. <a href="https://daily-journalapp.herokuapp.com/"> Learn More...</a></p>
                   </div> 
                   </div>
               </div>
