--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,13 +7,14 @@
   <meta name="author" content="Shreyank Jadiya">
   <meta name="description" content="This is my portfolio page">
   <meta name="keywords" content="portfolio,resume,web developer">
-  <link rel="stylesheet" href="/stylesheet/style.css" type="text/css">
+<link rel="stylesheet" href="/stylesheet/style.css" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Muli:400,600,700,800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://kit.fontawesome.com/ee427fdc71.js"></script>
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">    
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> 
   </head>
     
   <body>
@@ -63,7 +64,7 @@
   </div>
 </nav>
 </div>
-          <!--------------------About page------------------------------>
+ <!--------------------About page------------------------------>
           <div class="about container" id="about">
           <div class="row">
               <div class="col-md-6 text-center">
@@ -71,63 +72,87 @@
               </div>
               <div class="col-md-6">
               <h3> > WHO AM I ?</h3>
-              <p>Hello ! My name is <b>Shreyank Jadiya</b> and I have recently completed my masters in Electrical & Computer from <b>University of Windsor</b> I have started my career as a <b>Design Engineer</b> ,where my primary responsiblity was to work with product process design according to client's requirements. I have 2 years of Hands-on Coding experience designing mainly web apps with expertise in responsive web design, Cross Browser functionality testing and refactoring of code using latest methodologies like TDD and DevOps.</p><p>Parallel with my studies, I have also completed Web development course, followed by self made projects using latest technologies and frameworks. Moreover, my experience as a part time Team member has helped me to gain effective communication skills.Below, you can see more about myself as why I chose web development and my projects</p>
+              <p>Hello ! My name is <b>Shreyank Jadiya</b> and I have recently completed my masters in Electrical & Computer from <b>University of Windsor</b> I have started my career as a <b>Front End Engineer</b> ,where my primary responsiblity was to work with software development according to client's requirements. I have 2 years of Hands-on Coding experience designing mainly web apps with expertise in responsive web design, Cross Browser functionality testing and refactoring of code using latest methodologies like TDD and DevOps.</p><p>Parallel with my studies, I have also completed Web development course, followed by self made projects using latest technologies and frameworks. Moreover, my experience as a part time Team member has helped me to gain effective communication skills.</p>
                   <h3> > WHY WEB DEVELOPMENT ?</h3>
-                  <p>If you're looking for my profile for the first time, you might be wondering, why I have decided to go for web development?
-                  If I explain in short I would say I am a challenge hungry person who likes to complete the challenge. To Know more,Just contact me via e-mail or drop a text. I'm just a click away from you :).</p>
-                  <div class="skills-bar">
-                      <p>HTML/CSS/JS</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 85%;">85%</div>
-                      </div>
-                      
-                      <p>jQuery</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 70%;">70%</div>
-                      </div>
-                      
-                      <p>Git & Github</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 75%;">75%</div>
-                      </div>
-                      
-                      <p>JSON & XML</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 60%;">60%</div>
-                      </div>
-                      
-                      <p>MEN stack (MongoDB,ExpressJS,NodeJS)</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 70%;">70%</div>
-                      </div>
-                      
-                      <p>UI/UX Design</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 85%;">85%</div>
-                      </div>
-                      
-                      <p>ReactJS & AngularJS</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 70%;">70%</div>
-                      </div>
-                      
-                      <p>Python/C++/C#</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 65%;">65%</div>
-                      </div>
-                      
-                      <p>MySQL</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 60%;">60%</div>
-                      </div>
-                      <p>AWS</p>
-                  <div class="progress">
-                      <div class="progress-bar" style="width: 50%;">50%</div>
-                      </div>
-                      
-                </div>
+                  <p>Coding is all about passion and full of challenges. I do faced a lot challenges figuring out how things flow in development and the more I googled , the more I Learned. Challenges always inspired me and now my passion is at that level that I don't stop until I make something that amazes me.</p>
               </div>
             </div>
+          <!----Skills bar design ------------------>
+          <div class="row">
+            <h2 class="title-skills">My Skills</h2>
+          <!-------Skill 1 ---------------->
+            <div class="bar">
+              <div class="skill">HTML,CSS & JS</div>
+              <div class="bar-outer">
+             <div class="speech-bubble html">95%</div>
+                <div class="bar-inner ht"></div>
+              </div>
+            </div>
+          <!-------Skill 2---------------->
+            <div class="bar">
+              <div class="skill">UI/UX Design</div>
+              <div class="bar-outer">
+             <div class="speech-bubble design">75%</div>
+                <div class="bar-inner ui"></div>
+              </div>
+            </div>
+          <!-------Skill 3---------------->
+            <div class="bar">
+              <div class="skill">Frameworks(Node,Express,React,Redux,Angular)</div>
+              <div class="bar-outer">
+             <div class="speech-bubble frameworks">80%</div>
+                <div class="bar-inner fw"></div>
+              </div>
+            </div>
+          <!-------Skill 4---------------->
+            <div class="bar">
+              <div class="skill">SQL</div>
+              <div class="bar-outer">
+             <div class="speech-bubble sql">70%</div>
+                <div class="bar-inner sl"></div>
+              </div>
+            </div>
+          <!-------Skill 5---------------->
+            <div class="bar">
+              <div class="skill">MongoDB & Relational Database systems</div>
+              <div class="bar-outer">
+             <div class="speech-bubble mongodb">85%</div>
+                <div class="bar-inner mr"></div>
+              </div>
+            </div>
+          <!-------Skill 6---------------->
+            <div class="bar">
+              <div class="skill">C#</div>
+              <div class="bar-outer">
+             <div class="speech-bubble sharp">70%</div>
+                <div class="bar-inner cs"></div>
+              </div>
+            </div>
+          <!-------Skill 7---------------->
+            <div class="bar">
+              <div class="skill">Git & Github</div>
+              <div class="bar-outer">
+             <div class="speech-bubble git">90%</div>
+                <div class="bar-inner gt"></div>
+              </div>
+            </div>
+          <!-------Skill 8---------------->
+            <div class="bar">
+              <div class="skill">JSON & XML</div>
+              <div class="bar-outer">
+             <div class="speech-bubble json">80%</div>
+                <div class="bar-inner jx"></div>
+              </div>
+            </div>
+          <!-------Skill 9---------------->
+            <div class="bar">
+              <div class="skill">Wordpress & CMS</div>
+              <div class="bar-outer">
+             <div class="speech-bubble wordpress">70%</div>
+                <div class="bar-inner wp"></div>
+              </div>
+            </div>
+          </div>
           </div>
           <!---------------------------Sticky Icon Section-------------------------------------------------->
           <div class="social-icons">
@@ -146,18 +171,18 @@
                   <h3 class="text-center">Experience</h3>
                    <ul class="timeline">
                    <li>
-                       <h4>Sales Team Member</h4>
-                       <p>- Scanning merchandise quickly and accurate<br>- Greeting all Customers with a warm, friendly smile
-<br>- Making change, cashing cheques, and issuing receipts to customers<br>- Correctly counting back change to the Customer to prevent cash overages and shortages<br>
-                    <b>Company Name</b> - Paris Southern Lights Inc.<br> 
-                    <b>Duration</b> - 1 Year [2018 to 2019]<br>
-                    <b>Location</b> - Windsor,ON,Canada.
+                       <h4>Web Developer/Designer</h4>
+                       <p>- Worked as a web developer in sub -contractor role<br>- Developed web pages from scratch(.PSDs) and mockups using bootstrap by HTML/CSS/JS & JQUERY.
+<br>- Test websites on multiple browsers and mobiles to ensure reliability.<br>- Find potential security flaws in client code using devtools<br>
+                    <b>Company Name</b> - Tenpine Web Development<br> 
+                    <b>Duration</b> - 3 Months <br>
+                    <b>Location</b> - Welland,ON,Canada.
                        </p>
                        </li>
                        
                        <li>
-                       <h4> Design Engineer</h4>
-                       <p>- Designing maintenance strategies, procedures and methods <br> - Diagnosing breakdown problems <br> - Carrying out quality inspections on jobs <br> - Controlling maintenance tools, stores and equipment <br>- Monitoring and controlling maintenance costs <br> - Dealing with emergencies, unplanned faults and repairs<br>
+                       <h4> Front End Engineer</h4>
+                       <p>- Convert designs into applications using HTML, CSS, JavaScript and modern client-server side frameworks <br> - Write code and create SQL scripts for new products, features and functionalities along with continuously improving existing ones
                     <b>Company Name</b> - Neoseal Adhesives Pvt. Ltd.<br> 
                     <b>Duration</b> - 1 Year [2017 to 2018]<br>
                     <b>Location</b> - Vadodara,Gujarat,India.
@@ -202,6 +227,33 @@
               <p class="text-center">Below is Some of my major projects completed as part of my coursework and also self project<br>
                   For More Information, Please Contact me via E-mail or by text.
               </p>
+
+            <!------Projects sections -->
+            <div class="row">
+              <div class="col-md-4">
+                 <div class="projects-box">
+                  <i class="fas fa-comments"></i><span> React Chat App</span>
+                <p>An App Made with Node,Express,React and Google's Firebase<br>- App uses Material UI for design and have all features including notifications in real time. <a href="https://chat-me-app-9e152.firebaseapp.com"> Learn More..</a></p>
+                  </div> 
+                  </div>
+                  
+                  <div class="col-md-4">
+                 <div class="projects-box">
+                  <i class="fas fa-globe"></i><span> Gatsby + Contentful Blog</span>
+                <p>A Travel Blog Designed in Adobe XD and uses JAMstack + Netlify<br>- Blog is designed using Contentful(CMS) API and Gatsby Framework along with Netlify platform. <a href="https://fervent-brahmagupta-a7969b.netlify.com/"> Learn More..</a></p>
+                  </div> 
+                  </div>
+                  
+                  <div class="col-md-4">
+                 <div class="projects-box">
+                  <i class="fab fa-canadian-maple-leaf"></i><span> Country Guess App</span>
+                <p>An app designed as part of learning react and react router with redux state change<br>- App uses state changes to verify the correct answer choosen is right.Third Party API is used for the game. <a href="https://essdeejay.github.io/country_guessing_reactapp/"> Learn More..</a></p>
+                  </div> 
+                  </div>
+              </div>
+
+   <!---------------------row-2 projects section -------------------------------------->
+
               <div class="row">
               <div class="col-md-4">
                  <div class="projects-box">
@@ -213,7 +265,7 @@
                   <div class="col-md-4">
                  <div class="projects-box">
                   <i class="fa fa-cloud"></i><span> Weather Forecaster</span>
-                <p>Using terminal and python libraries made a data scrapper to scrap live data from openweathermap API<br>- Requests and JSON library to fetch live API data of any location around the world with successful conversion of data from JSON to Python</p>
+                <p>Using terminal and python libraries made a data scrapper to scrap live data from openweathermap API<br>- Requests and JSON library to fetch live API data of any location around the world with successful conversion of data.</p>
                   </div> 
                   </div>
                   
@@ -248,7 +300,7 @@
                       <p><a>https://github.com/EssDeeJay</a></p>
                   </div>
               </div>
-              <button type="button" class="btn btn-primary" onclick="window.location.href ='https://drive.google.com/open?id=1p3Yh90JURJ80ub5Mtyw4MKuMMzW1fLUX';">
+            <button type="button" class="btn btn-primary" onclick="window.location.href='https://drive.google.com/file/d/1VW5TKbNJwMleNKB67wqeWLuME9dSU-fE/view'">
                   <i class="fa fa-download"></i> Resume/CV</button>
               </div>
               <div class="footer text-center">
@@ -261,12 +313,12 @@
       
       <!------------------------jQuery and Bootstrap section--------------------------------->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
       <script src="/javascript/smooth-scroll.js"></script>
       <script>
-	  var scroll = new SmoothScroll('a[href*="#"]'); 
+    var scroll = new SmoothScroll('a[href*="#"]'); 
 </script>
-      
+ <script src="/javascript/home.js"></script>        
   </body>
 </html>
